--- a/src/output.css
+++ b/src/output.css
@@ -651,6 +651,14 @@ video {
   height: 9rem;
 }
 
+.max-h-screen {
+  max-height: 100vh;
+}
+
+.max-h-96 {
+  max-height: 24rem;
+}
+
 .w-3 {
   width: 0.75rem;
 }
